# convergio-observatory

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  release-please-config.json
crates/convergio-observatory/: Cargo.toml
crates/convergio-observatory/src/: anomaly.rs  dashboard.rs  export.rs  ext.rs  lib.rs  mcp_defs.rs  project_telemetry.rs  routes.rs  routes_webhook.rs  schema.rs  search.rs  sink.rs  timeline.rs  timeline_tests.rs  types.rs
docs/adr/: 001-extraction.md  002-audit-security-fixes.md  024-telegram-watchdog-grounded.md
