[workspace]
resolver = "2"
members = ["crates/convergio-observatory"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "LicenseRef-Convergio-Community"
repository = "https://github.com/Roberdan/convergio-observatory"

[workspace.dependencies]
# SDK dependencies
convergio-sdk = { git = "https://github.com/Roberdan/convergio-sdk", tag = "v0.1.7" }
convergio-types = { git = "https://github.com/Roberdan/convergio-sdk", tag = "v0.1.7" }
convergio-db = { git = "https://github.com/Roberdan/convergio-sdk", tag = "v0.1.7" }
convergio-telemetry = { git = "https://github.com/Roberdan/convergio-sdk", tag = "v0.1.7" }
convergio-ipc = { git = "https://github.com/Roberdan/convergio-ipc", tag = "convergio-ipc-v0.1.1" }

# Common deps — pin same versions as SDK for compatibility
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "fs", "io-util"] }
tracing = "0.1"
axum = { version = "0.7", features = ["ws", "multipart"] }
rusqlite = { version = "0.32", features = ["bundled", "functions"] }
