[package]
name = "convergio-observatory"
description = "Observability — metrics collection, distributed tracing, alerting"
version = "0.1.7"
edition.workspace = true
license.workspace = true
repository = "https://github.com/Roberdan/convergio-observatory"

[dependencies]
convergio-types = { workspace = true }
convergio-db = { workspace = true }
convergio-ipc = { workspace = true }
convergio-telemetry = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
